Update Modem Driver  from G906SKSU1CPF2
Signed-off-by: Mohammad(Khalvat-M)<mmba313@gmail.com>

--- a/drivers/misc/modem_if/Kconfig
+++ b/drivers/misc/modem_if/Kconfig
@@ -35,3 +35,8 @@ config GSM_MODEM_GG_DUOS
 	bool "GSM_MODEM_GG_DUOS"
 	depends on SEC_MODEM
 	default n
+
+config SEC_MIF_UART_SWITCH
+	bool "SEC_MIF_UART_SWITCH"
+	depends on SEC_MODEM
+	default n
